--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "new_year",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Prathamesh28.github.io/new_year/",
+
   "dependencies": {
     "cra-template": "1.2.0",
     "html2canvas": "^1.4.1",
@@ -10,6 +12,8 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
   }
 }
